--- a/src_.Net/Upgraded/PauloETL.vbproj
+++ b/src_.Net/Upgraded/PauloETL.vbproj
@@ -34,9 +34,14 @@
     <StartArguments />
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>packages\Newtonsoft.Json.6.0.8\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.XML" />
     <Reference Include="Microsoft.VisualBasic.Compatibility" />
@@ -99,6 +104,7 @@
       <DependentUpon>PauloETL_frmETLCommand.vb</DependentUpon>
     </EmbeddedResource>
     <Compile Include="Properties\AssemblyInfo.vb" />
+    <None Include="packages.config" />
     <None Include="PauloETL_UpgradeReport.htm">
       <Subtype>Preview</Subtype>
     </None>
